@startuml database-schema
!include ../../pipeline/diagrams/biergarten-weizen-theme.puml
skinparam linetype ortho

title Database Schema
caption Every table also has a RowVersion ROWVERSION column (optimistic concurrency), omitted below for brevity.\nTables marked (*) have no repository/feature slice yet.

package "User & Auth" {
  entity "UserAccount" as User {
    * UserAccountID: UNIQUEIDENTIFIER <<PK>>
    --
    * Username: VARCHAR(64) <<UNIQUE>>
    * FirstName: NVARCHAR(128)
    * LastName: NVARCHAR(128)
    * Email: VARCHAR(128) <<UNIQUE>>
    * CreatedAt: DATETIME
    UpdatedAt: DATETIME
    * DateOfBirth: DATE
  }

  entity "UserCredential" as Cred {
    * UserCredentialID: UNIQUEIDENTIFIER <<PK>>
    --
    * UserAccountID: UNIQUEIDENTIFIER <<FK>>
    * CreatedAt: DATETIME
    * Expiry: DATETIME
    * Hash: NVARCHAR(256)
    * IsRevoked: BIT
    RevokedAt: DATETIME
  }

  entity "UserVerification" as Verify {
    * UserVerificationID: UNIQUEIDENTIFIER <<PK>>
    --
    * UserAccountID: UNIQUEIDENTIFIER <<FK, UNIQUE>>
    * VerificationDateTime: DATETIME
  }

  entity "UserProfile" as Profile {
    * UserProfileID: UNIQUEIDENTIFIER <<PK>>
    --
    * UserAccountID: UNIQUEIDENTIFIER <<FK, UNIQUE>>
    * Biography: NVARCHAR(MAX)
  }

  entity "UserAvatar" as Avatar {
    * UserAvatarID: UNIQUEIDENTIFIER <<PK>>
    --
    * UserProfileID: UNIQUEIDENTIFIER <<FK>>
    * PhotoID: UNIQUEIDENTIFIER <<FK>>
    * ValidFrom: DATETIME2(3)
    ValidTo: DATETIME2(3)
    ..
    At most one row per UserProfileID
    has ValidTo IS NULL (active avatar)
  }

  entity "UserFollow (*)" as Follow {
    * UserFollowID: UNIQUEIDENTIFIER <<PK>>
    --
    * UserAccountID: UNIQUEIDENTIFIER <<FK>>
    * FollowingID: UNIQUEIDENTIFIER <<FK>>
    * CreatedAt: DATETIME
  }

  entity "Photo (*)" as Photo {
    * PhotoID: UNIQUEIDENTIFIER <<PK>>
    --
    Hyperlink: NVARCHAR(256)
    * UploadedByID: UNIQUEIDENTIFIER <<FK>>
    * UploadedAt: DATETIME
  }
}

package "Location" {
  entity "Country" as Country {
    * CountryID: UNIQUEIDENTIFIER <<PK>>
    --
    * CountryName: NVARCHAR(100)
    * ISO3166_1: CHAR(2) <<UNIQUE>>
  }

  entity "StateProvince" as StateProvince {
    * StateProvinceID: UNIQUEIDENTIFIER <<PK>>
    --
    * StateProvinceName: NVARCHAR(100)
    * ISO3166_2: CHAR(6) <<UNIQUE>>
    * CountryID: UNIQUEIDENTIFIER <<FK>>
  }

  entity "City" as City {
    * CityID: UNIQUEIDENTIFIER <<PK>>
    --
    * CityName: NVARCHAR(100)
    * StateProvinceID: UNIQUEIDENTIFIER <<FK>>
  }
}

package "Brewery" {
  entity "BreweryPost" as Brewery {
    * BreweryPostID: UNIQUEIDENTIFIER <<PK>>
    --
    * BreweryName: NVARCHAR(256)
    * PostedByID: UNIQUEIDENTIFIER <<FK>>
    * Description: NVARCHAR(512)
    * CreatedAt: DATETIME
    UpdatedAt: DATETIME
  }

  entity "BreweryPostLocation" as BreweryLoc {
    * BreweryPostLocationID: UNIQUEIDENTIFIER <<PK>>
    --
    * BreweryPostID: UNIQUEIDENTIFIER <<FK, UNIQUE>>
    * AddressLine1: NVARCHAR(256)
    AddressLine2: NVARCHAR(256)
    * PostalCode: NVARCHAR(20)
    * CityID: UNIQUEIDENTIFIER <<FK>>
    Coordinates: GEOGRAPHY
  }

  entity "BreweryPostPhoto (*)" as BreweryPhoto {
    * BreweryPostPhotoID: UNIQUEIDENTIFIER <<PK>>
    --
    * BreweryPostID: UNIQUEIDENTIFIER <<FK>>
    * PhotoID: UNIQUEIDENTIFIER <<FK>>
    * LinkedAt: DATETIME
  }
}

package "Beer (*)" {
  entity "BeerStyle (*)" as BeerStyle {
    * BeerStyleID: UNIQUEIDENTIFIER <<PK>>
    --
    * StyleName: NVARCHAR(100) <<UNIQUE>>
    Description: NVARCHAR(MAX)
  }

  entity "BeerPost (*)" as Beer {
    * BeerPostID: UNIQUEIDENTIFIER <<PK>>
    --
    * Name: NVARCHAR(100)
    * Description: NVARCHAR(MAX)
    * ABV: DECIMAL(4,2)
    * IBU: INT
    * PostedByID: UNIQUEIDENTIFIER <<FK>>
    * BeerStyleID: UNIQUEIDENTIFIER <<FK>>
    * BrewedByID: UNIQUEIDENTIFIER <<FK>>
    * CreatedAt: DATETIME
    UpdatedAt: DATETIME
  }

  entity "BeerPostPhoto (*)" as BeerPhoto {
    * BeerPostPhotoID: UNIQUEIDENTIFIER <<PK>>
    --
    * BeerPostID: UNIQUEIDENTIFIER <<FK>>
    * PhotoID: UNIQUEIDENTIFIER <<FK>>
    * LinkedAt: DATETIME
  }

  entity "BeerPostComment (*)" as BeerComment {
    * BeerPostCommentID: UNIQUEIDENTIFIER <<PK>>
    --
    * Comment: NVARCHAR(250)
    * BeerPostID: UNIQUEIDENTIFIER <<FK>>
    * CommentedByID: UNIQUEIDENTIFIER <<FK>>
    * Rating: INT
    * CreatedAt: DATETIME
    UpdatedAt: DATETIME
  }
}

' Relationships: User & Auth
User ||--o{ Cred
User ||--o| Verify
User ||--o| Profile
Profile ||--o{ Avatar
Avatar }o--|| Photo
User ||--o{ Follow
User ||--o{ Follow
User ||--o{ Photo

' Relationships: Location
Country ||--o{ StateProvince
StateProvince ||--o{ City

' Relationships: Brewery
User ||--o{ Brewery
Brewery ||--o| BreweryLoc
City ||--o{ BreweryLoc
Brewery ||--o{ BreweryPhoto
Photo ||--o{ BreweryPhoto

' Relationships: Beer
User ||--o{ Beer
BeerStyle ||--o{ Beer
Brewery ||--o{ Beer
Beer ||--o{ BeerPhoto
Photo ||--o{ BeerPhoto
Beer ||--o{ BeerComment
User ||--o{ BeerComment

@enduml
